2013-10-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/completion.c: Remove variable length arrays.
	* grub-core/normal/menu_entry.c: Likewise.

	Reduces normal.mod by 496 bytes.

2013-10-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/minix.c: Remove variable length arrays. Reduces jfs.mod
	by 356 bytes (158 compressed).

2013-10-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c: Remove variable length arrays. Reduces jfs.mod
	by 364 bytes (169 compressed).

2013-10-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c: Remove variable length arrays. Reduces afs.mod and
	bfs.mod size by 556 resp 740 bytes (288 resp 334 compressed).
	* include/grub/types.h (grub_unaligned_uint64_t): New type.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Lift 255x255 erminal sie restriction to 65535x65535. Also change from
	bitmasks to small structures of size chosen to fit in registers.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Use -freg-struct-return on i386. This
	decreases code size and improves performance.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/exec.c: Fix compilation error on emu.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Fix formatting of
	"(null)" string.
	Simplify expressions to save around 256 bytes in kernel.img.
	* tests/printf_unit_test.c (printf_test): Add "(null)" tests.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c (grub_video_capture_write_bmp):
	Use GRUB_UTIL_FD_O_* rather than O_*.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Add haiku-specific functions.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c: Remove few leftover includes.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Move stat () and device mode checking into OS-dependent files as